# bevy_ecs_template

./: Cargo.toml  log.txt  template.config.js
.templates/: widget-template
.templates/bevy-ecs-plugin/: components.rs  entities.rs  systems.rs
.templates/bevy-scene/: systems.rs
assets/image_effects/: combine_images_to_atlas.py  data.json
assets/image_explosion/: combine_images_to_atlas.py  data.json
assets/image_sprite_humans/: combine_images_to_atlas.py  data.animation.json  data.json
assets/image_sprite_zombie/: combine_images_to_atlas.py  data.animation.json
assets/kayak_fonts/: dos_box.kayak_font  dos_tall.kayak_font
assets/maps/: boracay.rooms.json  boracay_grass.tiledata.json  boracay_map.json  boracay_mountain.tiledata.json  boracay_rooms.json
assets/scenes/: load_scene_example-new.scn.ron
assets/shaders/: simple_point_light.wgsl
src/: main.rs
src/entity_factory/: mod.rs
src/entity_factory/entities/: mod.rs
src/entity_factory/factory/: data.rs  mod.rs  systems.rs
src/game_modules/: mod.rs
src/game_modules/camera/: components.rs  systems.rs
src/game_modules/controllable/: components.rs  entities.rs  systems.rs
src/game_modules/controls/: components.rs  entities.rs  systems.rs
src/game_modules/dynamic_data/: animation_definition.rs  mod.rs  (+4 more)
src/gui/: bordered.rs  crop_image.rs  dialogue.rs  menu_craft.rs  menu_menuinventory.rs  menu_menulist.rs  menu_overview.rs  mod.rs  notifications.rs  sample_with_state.rs  status_hud.rs  tasks.rs
src/scene_manager/: mod.rs
src/utils/: check_2circle_collide.rs  check_collide.rs  generate_colliderbody_frompoint.rs  generate_mesh.rs  globals.rs  mod.rs  value_range_map.rs
(+143 files in other folders)
