[package]
name = "attempt1_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
magic-crypt = "3.1.9"
bevy_rapier2d = "0.19.0"

[workspace]
resolver = "2"