[package]
name = "attempt1_prototype"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", features = ["dynamic"] }
bevy_egui = "0.18"
bevy-inspector-egui = "0.15"
knn = "0.1.3"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
magic-crypt = "3.1.9"
bevy_rapier2d = "0.19.0"
bevy_prototype_lyon = "0.7.2"
rayon = "1.6.1"

[workspace]
resolver = "2"